Archive2/36/477eed179bac22/main.cpp
#include <cstddef>

void foo(std::nullptr_t) = delete;
void foo(int*) {}

int main()
{
    foo(NULL);
}
